Fix text alignment and color for h5 and h6 elements

--- a/style7.css
+++ b/style7.css
@@ -7,3 +7,11 @@
     color: black;
     background-color: white;
 }
+h6{
+    text-align:ceter;
+    color:yellow;
+}
+h5{
+    text-align:center;
+    color:pink;
+}
